<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_keyword"
        style="@style/KeywordTextInputLayout">

        <EditText
            android:id="@+id/et_keyword"
            style="@style/KeywordEditText" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_search"
        style="@style/SearchByCategoryButton" />

    <ImageView
        android:id="@+id/iv_image"
        style="@style/ChuckNorrisImage" />

    <TextView
        android:id="@+id/tv_text"
        style="@style/ChuckNorrisText.JokeByCategory"
        android:text="Hello World! This is JokeByCategoryFragment" />

</FrameLayout>
